# TailOpsMCP

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .roomodes  0.21.0  7.0.0  =1.0.0  AGENTS.md  CODE_QUALITY.md  COMPLETE_REVIEW.md  COMPREHENSIVE_TEST_SUITE_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEVELOPER_SETUP.md  Dockerfile  FINAL_INTEGRATION_SYSTEM_VALIDATION_REPORT.md  HOMELAB_FEATURES.md  INFRASTRUCTURE_READINESS_REPORT.md  INTELLIGENT_LOG_ANALYSIS_QUICK_REF.md  INTELLIGENT_LOG_ANALYSIS_SUMMARY.md  INVENTORY_IMPLEMENTATION.md  Makefile  P0_P1_FIXES_SUMMARY.md  PROJECT_REVIEW_SUMMARY.md  QUALITY_SECURITY_ACTION_ITEMS.md  QUALITY_TOOLS_REFERENCE.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  REVIEW.md  SECURITY_AUDIT_FIXES.md  SECURITY_FIXES_SUMMARY.md  SECURITY_HARDENING.md  SECURITY_REVIEW_REPORT.md  STREAMLINING_REVIEW_REPORT.md  TAILOPSMCP_SECURITY_ACTION_ITEMS_STATUS_REPORT.md  TAILSCALE_SERVICES.md  TESTING_REMOTE_GUIDE.md  TEST_COVERAGE_REPORT.md  (+50 more)
.beads/: interactions.jsonl  issues.jsonl
.github/: dependabot.yml
.roo/: mcp.json
config/: policy.yaml.example  proxmox-config.yaml.example  remote-agents-config.yaml.example  security-config.yaml  security_database_schema.sql  serve.json
ct/: build.func  install.sh  tailops-gateway.sh
deploy/: .env.template  secure-deploy.sh
docs/: DEPLOY_PROXMOX_ONE_LINER.md  INTELLIGENT_LOG_ANALYSIS.md  POLICY_DRIVEN_EXECUTION_SYSTEM.md  PROXMOX_INTEGRATION_GUIDE.md  PROXMOX_MULTI_CONTAINER_INSTALL.md  PROXMOX_MULTI_CONTAINER_QUICKSTART.md  REMOTE_AGENT_EXAMPLES.md  REMOTE_AGENT_IMPLEMENTATION.md  SECURITY.md  SECURITY_ADVISORY.md  SECURITY_CONFIGURATION_GUIDE.md  TESTING_SETUP_GUIDE.md  TOON_INTEGRATION.md  TSIDP_AUTH_GUIDE.md  TSIDP_OIDC_SETUP.md  WORKFLOW_SYSTEM.md  async_await_analysis_report.md  best-practices.md  discovery_pipelines.md  enhanced_policy_validation.md  extra_features.md  gateway-use-cases.md  (+18 more)
(+376 files in other folders)
