[project]
name = "systemmanager-mcp-server"
version = "1.0.0"
description = "MCP Server for remote system management with Docker, filesystem, and network monitoring"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "SystemManager Team", email = "team@systemmanager.dev"},
]
dependencies = [
    "fastmcp>=1.0.0",
    "mcp>=1.0.0", 
    "psutil>=5.9.0",
    "paramiko>=2.9.0",
    "docker>=7.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.1",
    "cryptography>=42.0.0",
    "aiohttp>=3.9.0",
    "dnspython>=2.4.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.25.0",
    "slowapi>=0.1.9",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",

    # Code formatting and linting
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.6.0",
    "flake8>=6.0.0",

    # Type checking
    "mypy>=1.0.0",
    "types-psutil>=5.9.0",

    # Security scanning
    "bandit[toml]>=1.7.0",
    "safety>=3.0.0",

    # Pre-commit hooks
    "pre-commit>=3.5.0",
]

[project.scripts]
systemmanager-mcp = "src.cli.deploy:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.setuptools]
packages = { find = { where = ["src"] } }
